# diff-gaussian-rasterization-jvp

./: .gitignore  .gitmodules  CMakeLists.txt  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  backward_impl.h  config.h  float_grad_helper_math.h  float_grad_mat3.h  float_grad_mat4.h  float_grad_vec3.h  float_grad_vec4.h  forward.cu  forward.h  forward_impl.h  helper_math.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  rasterizer_jvp_impl.h  trust_region.cu  trust_region.h
diff_gaussian_rasterization/: __init__.py  batch_render.py  render_hessian.py  single_render.py  utils.py
tests/: compute_color_backward_tests.cu  compute_color_tests.cu  compute_cov3D_tests.cu  floatgrad_tests.cu  forward_tests.cu  in_frustum_test.cu  main.cu  preprocess_backward_tests.cu  preprocess_jvp_test.cu  render_backward_tests.cu  render_tests.cu  test_utils.cu  test_utils.h  test_utils_impl.h  transform4x4_test.cu  vec4_tests.cu
tests/data/: args.pth  campos.csv  means3D.csv  opacities.csv  parse_data.py  projmatrix.csv  projmatrix_raw.csv  rotations.csv  scales.csv  sh.csv  tanfovx.csv  tanfovy.csv
tests/render_data/: conic_opacity_data.csv  conic_opacity_grad.csv  depth_data.csv  depth_grad.csv  img_ranges.csv  means2D_data.csv  means2D_grad.csv  point_list.csv  point_offsets.csv  rgb_data.csv  rgb_grad.csv  tile_grid.csv
